@@ -725,6 +725,10 @@ IDLE
 Build
 -----
 
+- Issue #18481: Add C coverage reporting with gcov and lcov. A new make target
+  "coverage-report" creates an instrumented Python build, runs unit tests
+  and creates a HTML. The report can be updated with "make coverage-lcov".
+
 - Issue #17845: Clarified the message printed when some module are not built.
 
 - Issue #18256: Compilation fix for recent AIX releases.  Patch by
